# math-tutor

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
agents/: classification_agent.py  feynman_agent.py  quiz_agent.py  state.py  teacher_agent.py
tools/: diagram_models.py  document_extract.py  figure_render.py  learning_resources.py  math_render.py  quiz_tools.py  user_identity.py  web_search.py
