[project]
name = "math-tutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.4",
    "firecrawl-py==2.16",
    "httpx==0.28.1",
    "grandalf==0.8",
    "langchain[openai]==0.3.27",
    "openai>=2.36,<3",
    "langgraph==0.6.6",
    "streamlit==1.45.0",
    "langgraph-checkpoint-sqlite==2.0.11",
    "langgraph-cli[inmem]==0.4.0",
    "langgraph-supervisor==0.0.29",
    "langgraph-swarm==0.0.14",
    "pypdf==5.6.0",
    "pytest==8.4.2",
    "python-docx==1.2.0",
    "python-dotenv==1.1.1",
    "ddgs==9.14.2",
]

[dependency-groups]
dev = [
    "ipykernel==6.30.1",
]
